# ram

./: Cargo.toml  README.md  shell.nix
src/: instructions.rs  lib.rs  machine.rs  main.rs  parser.rs  utils.rs
www/: index.js  package.json
