[package]
name = "ram_2"
version = "0.1.0"
authors = ["Daniel Albert <git@esclear.de>"]
edition = "2018"

description = " A parser and interpreter for a simplistic model of computation."
repository = "https://github.com/esclear/ram"
license = "GPL-3.0"

[dependencies]
nom = "5.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true