[package]
name = "ram"
version = "0.1.0"
authors = ["Daniel Albert <git@esclear.de>"]
edition = "2018"

description = " A parser and interpreter for a simplistic model of computation."
repository = "https://github.com/esclear/ram"
license = "GPL-3.0"

[dependencies]
nom = "5.0"
argparse = "0.2.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'